# fluxkit

./: AGENTS.md  Cargo.toml  README.md  flake.nix
.cargo/: config.toml  rustdoc-wrapper.sh
crates/fluxkit/: Cargo.toml
crates/fluxkit/examples/: dump_modulation_csv.rs  threaded_bringup.rs
crates/fluxkit/src/: calibration.rs  lib.rs  system.rs
crates/fluxkit/src/calibration/: actuator.rs  motor.rs  shared.rs
crates/fluxkit/tests/: calibration_sim.rs  system_sim.rs
crates/fluxkit_core/: Cargo.toml
crates/fluxkit_core/examples/: host_current_loop.rs
crates/fluxkit_core/src/: actuator.rs  command.rs  config.rs  error.rs  fault.rs  io.rs  lib.rs  mode.rs  motor.rs  params.rs  schedule.rs  state.rs  status.rs  util.rs  validation.rs
crates/fluxkit_core/src/calibration/: actuator_blend_band.rs  actuator_breakaway.rs  actuator_friction.rs  actuator_gear_ratio.rs  actuator_result.rs  current_offset.rs  encoder_align.rs  error.rs  flux_linkage.rs  mod.rs  phase_inductance.rs  phase_resistance.rs  pole_pairs_and_offset.rs  result.rs  routine.rs
crates/fluxkit_core/src/calibration/actuator/: blend_band.rs  breakaway.rs  friction.rs  gear_ratio.rs  mod.rs  result.rs
crates/fluxkit_core/src/calibration/motor/: flux_linkage.rs  mod.rs  phase_inductance.rs  phase_resistance.rs  pole_pairs_and_offset.rs  result.rs
crates/fluxkit_core/src/calibration/shared/: mod.rs  release_ramp.rs  routine.rs  timing.rs
crates/fluxkit_core/src/control/: current.rs  mod.rs  position.rs  torque.rs  velocity.rs
crates/fluxkit_core/src/startup/: align.rs  handoff.rs  mod.rs  open_loop.rs
crates/fluxkit_hal/: Cargo.toml
crates/fluxkit_hal/src/: bus.rs  current.rs  fault.rs  gate.rs  lib.rs  output.rs  pwm.rs  rotor.rs  temperature.rs  time.rs  util.rs
crates/fluxkit_math/: Cargo.toml
crates/fluxkit_math/examples/: plot_modulation.rs
crates/fluxkit_math/src/: angle.rs  frame.rs  lib.rs  ramp.rs  saturation.rs  scalar.rs  transforms.rs  trig.rs  units.rs  util.rs
crates/fluxkit_math/src/control/: mod.rs  pi.rs
crates/fluxkit_math/src/estimation/: angular.rs  internal.rs  mod.rs  signal.rs
crates/fluxkit_math/src/filter/: lpf.rs  mod.rs
crates/fluxkit_math/src/modulation/: mod.rs  sine_pwm.rs  svpwm.rs
crates/fluxkit_pmsm_sim/: Cargo.toml
crates/fluxkit_pmsm_sim/examples/: closed_loop_actuator_compensation.rs  closed_loop_current.rs  closed_loop_position.rs  closed_loop_torque_command.rs  closed_loop_velocity_command.rs
crates/fluxkit_pmsm_sim/src/: error.rs  lib.rs  params.rs  state.rs
crates/fluxkit_pmsm_sim/tests/: calibration.rs  closed_loop.rs
docs/: katex-header.html
scripts/: coverage.sh  generate-doc-plots.sh
tools/: plot_modulation.py
