[package]
name = "fluxkit"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "Multi-crate no_std motor-control library workspace entry point"
repository = ""

[features]
default = []
defmt = ["fluxkit_core/defmt", "fluxkit_hal/defmt", "fluxkit_math/defmt"]
serde = ["fluxkit_core/serde", "fluxkit_hal/serde", "fluxkit_math/serde"]

[dependencies]
fluxkit_core = { path = "../fluxkit_core", package = "fluxkit-core" }
fluxkit_hal = { path = "../fluxkit_hal", package = "fluxkit-hal" }
fluxkit_math = { path = "../fluxkit_math" }
