[package]
name = "fluxkit-pmsm-sim"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "Ideal PMSM plant emulator for Fluxkit integration tests"
repository = ""

[features]
default = []
defmt = ["dep:defmt", "fluxkit_math/defmt"]
serde = ["dep:serde", "fluxkit_math/serde"]

[dependencies]
defmt = { version = "0.3", optional = true }
fluxkit_math = { path = "../fluxkit_math" }
serde = { version = "1", default-features = false, features = ["derive"], optional = true }

[dev-dependencies]
fluxkit_core = { path = "../fluxkit_core", package = "fluxkit-core" }
plotters = "0.3.7"
